--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,7 @@ h3 {
   text-align: center;
   margin-top: 75px;
   margin-bottom: 75px;
+  padding: 1px;
 }
 
 .mapouter {
@@ -108,7 +109,7 @@ h4 {
 }
 
 #parallax2 {
-    background-image: url(foodcover.jpg);
+    background-image: url(spread.jpg);
     min-height: 50vh;
     background-attachment: fixed;
     background-position: center;
@@ -242,6 +243,7 @@ img {
 .form {
   text-align: center;
   padding-bottom: 50px;
+  margin: 1px;
   color: white;
 }
 
@@ -275,4 +277,11 @@ input[type=message] {
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=message]:focus {
   background-color: purple;
+}
+
+table {
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
+  box-shadow: 5px 5px 3px #888888;
 }
